--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "name": "where-money",
+  "author": "Max Ulyanov",
+  "homepage": "https://github.com/M-Ulyanov/WhereMoney/",
   "private": true,
   "scripts": {
     "build": "ionic-app-scripts build",
@@ -33,13 +33,14 @@
     "@ionic/app-scripts": "0.0.38",
     "typescript": "2.0.6"
   },
-  "description": "WhereMoney: An Ionic project",
+  "description": "WhereMoney: desc...",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
+    "cordova-sqlite-storage",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": []
