--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ log.txt
 *.sublime-workspace
 .vscode/
 npm-debug.log*
+*.keystore
 
 .idea/
 .sass-cache/
@@ -28,6 +29,7 @@ plugins/android.json
 plugins/ios.json
 www/
 $RECYCLE.BIN/
+
 
 .DS_Store
 Thumbs.db
